<resources>
    <string name="app_name">Receipt Budgeter</string>
    <string name="tab_text_1">Finance</string>
    <string name="tab_text_2">Income</string>
    <string name="tab_text_3">Income Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_income">Income</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="income_title_display">Income</string>
    <string name="expenses_title_display">Expenses</string>
    <string name="budget_expenses">Expenses: </string>
    <string name="income_user">Income: </string>
    <string name="budget_necessities">Necessities: </string>
    <string name="budget_wants">Wants: </string>
    <string name="budget_debt_repayment">Savings/Debt: </string>

    <string name="total_budget_title">Total</string>
    <string name="total_budget">Total: </string>

    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
</resources>
