<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<!--    look at weight sum, when you finished application data, and inputted everything,-->
<!--    fix this by looking at the weight/weightSum feature, as this seems to nature the ratio of the-->
<!--    view relative to each layout defined in this file.-->

<!--    right now, just have text down; none of these have ID's. Now, need to add user input boxes which will be ID's linked-->
<!--    to the FinanceDisplayFragment!. This includes the -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="25"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:text="@string/income_title_display"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/incomeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:text="@string/expenses_title_display"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/expensesID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangle"
                android:text="@string/total_budget_title"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/budgetID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/needsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/wantsID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/debtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>